# aws-cur-report-generator

./: .claude.md  .env.example  .gitignore  Claude.md  LICENSE  QUICKSTART.md  README.md  cur_report_generator.py  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  cost-analyzer.md  report-builder.md  test-runner.md
.claude/commands/: add-chart.md  check-all.md  debug-report.md  generate-example.md  lint.md  test.md
.github/workflows/: test.yml
examples/: README.md  cost_by_account_example.csv  cost_by_service_example.csv  daily_trend_example.csv  example_report.html  monthly_summary_example.csv
src/: __init__.py  data_processor.py  s3_reader.py  visualizer.py
tests/: __init__.py  conftest.py  test_cli.py  test_data_processor.py  test_examples.py  test_s3_reader.py  test_visualizer.py
